--- a/Client/index.html
+++ b/Client/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Online Shopping India | Buy Mobiles, Electronics, Appliances, Clothing and More Online at Flipkart"
+    />
     <title>Flipkart MERN | Ecommerce Website</title>
   </head>
   <body>
